syntax = "proto3";

package ai.metathings.service.camerad;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "camera.proto";

message ShowByApplicationCredentialIdRequest {
	google.protobuf.StringValue application_credential_id = 1 [(validator.field) = {msg_exists: true}];
}

message ShowByApplicationCredentialIdResponse {
	Camera camera = 1;
}
